--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,11 @@ a {
 }
 
 .presentacion {
-    text-align: center;
+    display: flex;
+    /*text-align: center;*/
     /*font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;*/
+    margin: auto;
+    padding: 20px;
 }
 
 .video-definicion {
